[package]
name = "derive_web_storage"
version = "1.0.0"
edition = "2021"
authors = ["Jorge Rico Vivas <jorgericoinformatic@gmail.com>"]
description = "Easily associate Storage values to variables and manage them without manually using the Web Storage API"
repository = "https://github.com/JorgeRicoVivas/storage_data"
keywords = ["Storage", "WebStorage", "LocalStorage", "SessionStorage"]
categories = ["no-std", "wasm", "data-structures", "web-programming"]
license-file = "LICENSE.txt"
readme = "README.md"

[lib]
proc-macro = true

[features]
default = ["default_storage_local"]

default_storage_local = []
default_storage_session = []

[dependencies]
convert_case = "0.7.1"
proc-macro2 = { version = "1.0.93", features = [] }
proc-macro-error = "1.0.4"
quote = { version = "1.0.38", features = [] }
syn = { version = "2.0.98", features = ["full"] }

